--- a/templates/dataplane.conf.tmpl
+++ b/templates/dataplane.conf.tmpl
@@ -46,9 +46,9 @@ plugins {
   plugin arp_plugin.so { disable }
   plugin rd_cp_plugin.so { disable }
   plugin igmp_plugin.so { disable }
-  plugin v6n_osvbng_arp_punt_plugin.so { enable }
-  plugin v6n_osvbng_fib_control_plugin.so { enable }
-  plugin v6n_osvbng_accounting_plugin.so { enable }
+  plugin osvbng_punt_plugin.so { enable }
+  plugin fib_control_plugin.so { enable }
+  plugin osvbng_accounting_plugin.so { enable }
 }
 
 logging {
@@ -61,10 +61,6 @@ linux-cp {
   lcp-auto-subint
   del-static-on-link-down
   del-dynamic-on-link-down
-}
-
-punt {
-  socket {{ .PuntSocket }}
 }
 
 statseg {
