--- a/templates/dataplane.conf.tmpl
+++ b/templates/dataplane.conf.tmpl
@@ -50,6 +50,7 @@ plugins {
   plugin osvbng_fib_control_plugin.so { enable }
   plugin osvbng_accounting_plugin.so { enable }
   plugin osvbng_pppoe_plugin.so { enable }
+  plugin osvbng_ipoe_plugin.so { enable }
 }
 
 logging {
