feat(routing): add VRF manager with Linux VRF and VPP table lifecycle

--- a/templates/frr.conf.tmpl
+++ b/templates/frr.conf.tmpl
@@ -3,6 +3,7 @@ service integrated-vtysh-config
 ip forwarding
 ipv6 forwarding
 !
+{{ template "vrf" . }}
 {{ template "bgp" . }}
 {{ template "ospf" . }}
 {{ template "ospf6" . }}
