feat(dataplane): add LCP namespace support with interface MTU sync

--- a/templates/dataplane.conf.tmpl
+++ b/templates/dataplane.conf.tmpl
@@ -59,7 +59,8 @@ logging {
 }
 
 linux-cp {
-  lcp-sync
+{{ if .LCPNetNs }}  default netns {{ .LCPNetNs }}
+{{ end }}  lcp-sync
   lcp-auto-subint
   del-static-on-link-down
   del-dynamic-on-link-down
